# Shreeray

./: README.md  SKILL.md  pyproject.toml
examples/: biomedical.md  chemistry.md  cybersecurity.md  refusal-recovery.md
resources/: domain_templates.md  policy_boundary.md  refusal_recovery.md
scripts/: safeprompt_lint.py
tests/: test_safeprompt_lint.py
