[project]
name = "safeprompt-reformulator"
version = "0.1.0"
description = "A Claude Agent Skill for policy-compliant prompt reformulation and refusal recovery."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "SafePrompt contributors"}]

[project.scripts]
safeprompt-lint = "scripts.safeprompt_lint:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
